--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "The o"
 title_separator          : "-"
 name                     : "Javad PourMostafa"
 description              : "The official website of Javad PourMostafa!"
