--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ title                    : "The official website of Javad PourMostafa!"
 title_separator          : "-"
 name                     : "Javad PourMostafa"
 description              : "The official website of Javad PourMostafa!"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://joyebright.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "joyebright/JoyeBright.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
