--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ analytics:
 # Site Author
 author:
   name             : "Javad PourMostafa"
-  avatar           : "bio-photo.jpg"
+  avatar           : "assets/images/bio-photo.jpg"
   bio              : "Software Engineer"
   location         : "Rasht-Iran"
   email            : "Javad.PourMostafa@Gmail.com"
