--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ author:
   name             : "Javad PourMostafa"
   avatar           : "assets/images/bio-photo.jpg"
   bio              : "#NLPer-Software Engineer"
-  location         : "Rasht-Iran"
+  location         : "University of Guilan"
   email            : "Javad.PourMostafa@Gmail.com"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
@@ -111,23 +111,23 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           :
+  github           : "JoyeBright"
   gitlab           :
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "Javad.PourMostafa"
   lastfm           :
-  linkedin         : # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
+  linkedin         : "javadpourmostafa"
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
-  twitter          :
+  twitter          : "JPourMostafa"
   vine             :
   weibo            :
   xing             :
-  youtube          : # "https://youtube.com/c/MichaelRoseDesign"
+  youtube          : "http://www.youtube.com/c/JavadPourMostafa"
 
 
 # Reading Files
