--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ author:
   linkedin         : "javadpourmostafa"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
+  stackoverflow    : "1736286/joyebright"
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
   twitter          : "JPourMostafa"
