--- a/_config.yml
+++ b/_config.yml
@@ -121,6 +121,8 @@ author:
   weibo            :
   xing             :
   youtube          : "http://www.youtube.com/c/JavadPourMostafa"
+  #researchgate     : ""
+  #googlescholar    : ""
 
 
 # Reading Files
