add navigation menu

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,9 +4,18 @@ main:
   # url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
     - title: "About"
       url: https://mmistakes.github.io/minimal-mistakes/about/
+      description: "It's all about me!"
+    - title: "CV"
+      url: #
   # - title: "Sample Posts"
   #   url: /year-archive/
+    - title: "Teaching"
+      url: #
+    - title: "Publications"
+      url : #
+    - title: "Photos"
+      url: #
   # - title: "Sample Collections"
   #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+    - title: "Sitemap"
+      url: /sitemap/
