--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   # title: "Quick-Start Guide"
   # url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
     - title: "About"
-      url: https://mmistakes.github.io/minimal-mistakes/about/
+      url: "/about/"
       description: "It's all about me!"
     - title: "CV"
       url: "/cv/"
