--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   # title: "Quick-Start Guide"
   # url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+    - title: "About"
+      url: "/"
     - title: "CV"
       url: "/cv/"
   # - title: "Sample Posts"
