--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ locale                   : "en-US"
 title                    : "Javad PourMostafa Roshan Sharami"
 title_separator          : "-"
 name                     : "Javad PourMostafa"
-description              : "The official website of Javad PourMostafa!"
+description              : "Javad PourMostafa, Javad PourMostaf Roshan Sharami, The Official Website Of Javad PourMostafa, جواد پورمصطفی, جواد پورمصطفی روشن شارمی"
 url                      : "https://joyebright.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "joyebright/JoyeBright.github.io"
