--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ algolia:
   powered_by             : # true (default), false
 
 # SEO Related
-google_site_verification :
+google_site_verification : "WxDIWxl3yojKj1dcOS9yzQYD9PNmbEHl6_2uBX-0-wg"
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
