--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,23 @@
 # main links
 main:
-  # title: "Quick-Start Guide"
-  # url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-    - title: "About"
+    - title: "Home"
       url: "/"
+      
     - title: "CV"
       url: "/cv/"
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-    - title: "Teaching"
-      url: "/teaching/"
-    - title: "Publications"
+    
+    - title: "Blog"
       url: #
+      
     - title: "Services"
       url: "http://gilro.net"
+      
+    - title: "Portfolio"
+      url: #
       description: "The comprehensive list of products and services"
+      
     - title: "Photos"
       url: #
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
+      
+    - title: "Contact"
+      url: #
