--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
       
     - title: "Portfolio"
       url: #
-      description: "The comprehensive list of products and services"
+      description: "The comprehensive list of products"
       
     - title: "Photos"
       url: #
