--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Javad PourMostafa Roshan Sharami"
 title_separator          : "-"
 name                     : "Javad PourMostafa"
 description              : "The Official Website Of Javad PourMostafa Roshan Sharami"
-url                      : "https://joyebright.github.io"
+url                      : "https://javad.pourmostafa.com"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "joyebright/JoyeBright.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
