--- a/_config.yml
+++ b/_config.yml
@@ -269,6 +269,14 @@ defaults:
     values:
       layout: single
       author_profile: true
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: true
+      share: true
       
 # Collections
 collections:
