--- a/_config.yml
+++ b/_config.yml
@@ -275,9 +275,9 @@ defaults:
       type: portfolio
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       share: true
-      
+
 # Collections
 collections:
   portfolio:
