--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 assets/images/\.DS_Store
 
 _portfolio/\.nfs\.20051025\.1c2d
+
+assets/images/\._ieltsteh\.jpg
+
+assets/images/\.nfs\.20051028\.2135
