Goldenphysics and portfolio has been updated

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ _portfolio/\.nfs\.20051025\.1c2d
 assets/images/\._ieltsteh\.jpg
 
 assets/images/\.nfs\.20051028\.2135
+
+assets/images/GoldenPhysics/\._GoldenPhysics9\.png
+
+assets/images/GoldenPhysics/\.nfs\.2005103e\.0305
