--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ assets/images/\.nfs\.20051028\.2135
 assets/images/GoldenPhysics/\._GoldenPhysics9\.png
 
 assets/images/GoldenPhysics/\.nfs\.2005103e\.0305
+
+assets/images/GoldenPhysics/\.nfs\.2005103f\.0305
