--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ assets/images/GoldenPhysics/\._GoldenPhysics9\.png
 assets/images/GoldenPhysics/\.nfs\.2005103e\.0305
 
 assets/images/GoldenPhysics/\.nfs\.2005103f\.0305
+
+assets/images/GoldenPhysics/\._GoldenPhysics10\.png
+
+assets/images/GoldenPhysics/\.nfs\.20051040\.0305
