--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ assets/images/GoldenPhysics/\.nfs\.2005103f\.0305
 assets/images/GoldenPhysics/\._GoldenPhysics10\.png
 
 assets/images/GoldenPhysics/\.nfs\.20051040\.0305
+
+assets/images/GoldenPhysics/\.nfs\.20051042\.0305
