Auto stash before rebase of "origin/master"

--- a/_config.yml
+++ b/_config.yml
@@ -275,7 +275,7 @@ defaults:
       type: portfolio
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       share: true
 
 # Collections
