--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ assets/images/GoldenPhysics/\._GoldenPhysics10\.png
 assets/images/GoldenPhysics/\.nfs\.20051040\.0305
 
 assets/images/GoldenPhysics/\.nfs\.20051042\.0305
+
+assets/images/IELTSTeh/\.DS_Store
