--- a/_config.yml
+++ b/_config.yml
@@ -83,9 +83,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : google # false (default), "google", "google-universal", "custom"
+  provider               : "google" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : UA-120814892-1
+    tracking_id          : "UA-120814892-1"
     anonymize_ip         : # true, false (default)
 
 
