--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ assets/images/GoldenPhysics/\.nfs\.20051040\.0305
 assets/images/GoldenPhysics/\.nfs\.20051042\.0305
 
 assets/images/IELTSTeh/\.DS_Store
+
+assets/images/\._bio-photo\.jpg
