--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ analytics:
 author:
   name             : "Javad PourMostafa"
   avatar           : "assets/images/bio-photo.jpg"
-  bio              : "Software Engineer"
+  bio              : "Software Engineer, NLP Specialist"
   location         : "University of Guilan"
   email            : "Javad.PourMostafa@Gmail.com"
   uri              :
