--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ analytics:
 # Site Author
 author:
   name             : "Javad PourMostafa"
-  avatar           : "assets/images/bio-photo.jpg"
+  avatar           : "assets/images/bio-photo2.jpeg"
   bio              : "Software Engineer, NLP Specialist"
   location         : "University of Guilan"
   email            : "Javad.PourMostafa@Gmail.com"
