--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -120,7 +120,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "http://www.youtube.com/c/JavadPourMostafa"
+  youtube          : # "http://www.youtube.com/c/JavadPourMostafa"
   researchgate     : "Javad_Pourmostafa_Roshan_Sharami"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=xqccd64AAAAJ"
   #googlescholar    : ""
