--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ author:
   gitlab           :
   google_plus      :
   keybase          :
-  instagram        : "Javad.PourMostafa"
+  instagram        : #
   lastfm           :
   linkedin         : "javadpourmostafa"
   pinterest        :
