--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ analytics:
 author:
   name             : "Javad PourMostafa"
   avatar           : "assets/images/bio-photo2.jpeg"
-  bio              : "MSc in Computer Engineering and An NLP Researcher"
+  bio              : "An NLP Researcher"
   location         : "University of Guilan"
   email            : "Javad.PourMostafa@Gmail.com"
   uri              : 
