--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Javad PourMostafa (Roshan Sharami)"
+title                    : "Javad PourMostafa Roshan Sharami"
 title_separator          : "-"
 name                     : "Javad PourMostafa"
 description              : "The Official Website Of Javad PourMostafa Roshan Sharami"
