--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ locale                   : "en-US"
 title                    : "Javad PourMostafa Roshan Sharami"
 title_separator          : "-"
 name                     : "Javad PourMostafa"
-description              : "The Official Website Of Javad PourMostafa Roshan Sharami"
+description              : "The Official Website of Javad PourMostafa Roshan Sharami"
 url                      : "https://javad.pourmostafa.com"
 baseurl                  : #
 repository               : "joyebright/JoyeBright.github.io"
