--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 locale                   : "en-US"
 title                    : "Javad Pourmostafa Roshan Sharami"
+titleinPersian           : "جواد پورمصطفی"
 title_separator          : "-"
 name                     : "Javad Pourmostafa"
 description              : "The official website of Javad Pourmostafa Roshan Sharami; interested in NLP and deep learning, more broadly AI."
