--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Javad PourMostafa"
+  name             : "Javad Pourmostafa"
   avatar           : "assets/images/bio-photo2.jpeg"
   bio              : "An NLP Researcher"
   location         : "University of Guilan"
