--- a/_config.yml
+++ b/_config.yml
@@ -94,9 +94,9 @@ analytics:
 author:
   name             : "Javad Pourmostafa"
   avatar           : "assets/images/bio-photo2.jpeg"
-  bio              : "An NLP Researcher"
-  location         : "University of Guilan"
-  email            : "Javad.PourMostafa@Gmail.com"
+  bio              : "A PhD Candidate in AI"
+  location         : "Tilburg University"
+  email            : "javad.pourmostafa@gmail.com"
   uri              : 
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
