--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ analytics:
 author:
   name             : "Javad Pourmostafa"
   avatar           : "assets/images/bio-photo2.jpeg"
-  bio              : "A PhD Candidate in AI"
+  bio              : "PhD Candidate in Artifical Intelligence"
   location         : "Tilburg University"
   email            : "javad.pourmostafa@gmail.com"
   uri              : 
