--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Javad Pourmostafa Roshan Sharami"
 titleinPersian           : "جواد پورمصطفی"
 title_separator          : "-"
 name                     : "Javad Pourmostafa"
-description              : "The official website of Javad Pourmostafa Roshan Sharami; interested in NLP and deep learning, more broadly AI."
+description              : "Hi there , welcome to my webpage. My full name is Javad Pourmostafa (pronounced /’dʒævɒd puːr’moʊs’tae’fɑː/)! I go by joeybright or joyebright wherever I can get the username.I am currently a first-year PhD candidate at the Department of Cognitive Science and Artificial Intelligence of Tilburg University."
 url                      : "https://javad.pourmostafa.com"
 baseurl                  : #
 repository               : "joyebright/JoyeBright.github.io"
