--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ analytics:
 # Site Author
 author:
   name             : "Javad Pourmostafa"
-  avatar           : "assets/images/bio-photo2.JPG"
+  avatar           : "assets/images/bio-photo2.jpeg"
   bio              : "PhD Candidate in Artifical Intelligence"
   location         : "Tilburg University"
   email            : "javad.pourmostafa@gmail.com"
