--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ author:
   youtube          : # "http://www.youtube.com/c/JavadPourMostafa"
   researchgate     : "Javad_Pourmostafa_Roshan_Sharami"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=xqccd64AAAAJ"
-  #googlescholar    : ""
+  semanticscholar  : "https://www.semanticscholar.org/author/Javad-Pourmostafa-Roshan-Sharami/1630385856"
 
 
 # Reading Files
