Add semantic scholar

--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "http://www.youtube.com/c/JavadPourMostafa"
+  youtube          : #"http://www.youtube.com/c/JavadPourMostafa"
   researchgate     : "Javad_Pourmostafa_Roshan_Sharami"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=xqccd64AAAAJ"
   semanticscholar  : "https://www.semanticscholar.org/author/Javad-Pourmostafa-Roshan-Sharami/1630385856"
