--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Javad Pourmostafa Roshan Sharami"
 titleinPersian           : "جواد پورمصطفی"
 title_separator          : "-"
 name                     : "Javad Pourmostafa"
-description              : "Homepage of Javad Pourmostafa Roshan Sharami, a first-year PhD candidate at the Department of Cognitive Science and Artificial Intelligence of Tilburg University."
+description              : "Homepage of Javad Pourmostafa Roshan Sharami, a PhD candidate at the Department of Cognitive Science and Artificial Intelligence of Tilburg University."
 url                      : "https://javad.pourmostafa.com"
 baseurl                  : #
 repository               : "joyebright/JoyeBright.github.io"
