--- a/_config.yml
+++ b/_config.yml
@@ -84,9 +84,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google" # false (default), "google", "google-universal", "custom"
+  provider               : "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "G-D6TSLNGET9"
+    tracking_id          : "G-D6TSLNGET"
     anonymize_ip         : # true, false (default)
 
 
