--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ social:
 analytics:
   provider               : "google-gtag" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "G-D6TSLNGET"
+    tracking_id          : "G-D6TSLNGET9"
     anonymize_ip         : # true, false (default)
 
 
