--- a/_config.yml
+++ b/_config.yml
@@ -81,6 +81,8 @@ social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
   links: # An array of links to social media profiles
+   - title: "ACL Anthology"
+     url: "https://aclanthology.org/people/j/javad-pourmostafa-roshan-sharami/"
 
 # Analytics
 analytics:
